--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,15 @@ section {
     margin-bottom: 2em;
 }
 
+#home h1 {
+    font-size: 2.5em; /* Make the "Welcome to My Portfolio" text bigger */
+    margin-bottom: 0.5em;
+}
+
+#home p {
+    margin: 0.5em 0; /* Reduce margin for less gap */
+}
+
 .view-toggle {
     margin-bottom: 1em;
     text-align: right; /* Align toggle buttons to the right */
