--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ nav ul {
     list-style-type: none;
     padding: 0;
     display: flex;
-    justify-content: left;
+    justify-content: center;
 }
 
 nav ul li {
